# tweetfeed

./: .flake8  .gitignore  .pylintrc  Makefile  README.md  Untitled.ipynb  attention_project.md  install_nltk.py  merm_chart.md  mypy.ini  notes  pipeline.py  pyproject.toml  requirements.txt  setup.py  st_app.py
.github/workflows/: codeql-analysis.yml
airflow/: airflow.cfg  airflow.db
airflow/dags/: bash_ex.py  demo_dag.py  get_home_timeline.py  get_other_tweets1.py  get_other_tweets2.py  get_tweets.py  update_model.py
airflow/logs/scheduler/: latest
app/: cli.py  config.py
data/: dataset.json.dvc  mute_list.txt  mute_list_cs.txt  predictions.csv.dvc  seen.csv.dvc  test_predictions.csv  test_tweets.db
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: preds.yml  tweets.yml
great_expectations/expectations/: .ge_store_backend_id  datasetjson.json  preds.json  tweet_dataset.json
notebooks/: EDA.py  TODO.md  Tweetfeed.ipynb  Untitled-1.py  Untitled-1a.py  Untitled.ipynb  add accounts to list.ipynb  add and remove accounts from lists.ipynb  add sleep to function.ipynb  auth and get friends.ipynb  baseline.py  batch_processing.py  cli_click.py  collections.ipynb  crate muted txt.ipynb  create dataset.ipynb  create muted txt.ipynb  create_data.ipynb  create_dataset.py  create_lists.py  create_news_domains_list.ipynb  db.ipynb  db.py  embed tweet.ipynb  extract from url.ipynb  first_batch.csv  get_friends_ids.ipynb  grab 1000 tweets-expanded url.ipynb  grab 1000 tweets.ipynb  grab 10000 tweets.ipynb  hud queries.ipynb  identify_news.ipynb  logreggang.py  news sites domains.ipynb  news_domains.txt  news_sites.csv  old_db.py  old_utils.py  plan.md  predict.py  (+10 more)
src/: db.py  pipeline.py  pipeline_functions.py  utils.py
streamlit/: st_app.py
tests/: home.db  mute_list.txt  mute_list_cs.txt  news_domains.txt  seen.csv  test_dataset.json  test_pipelines.py  test_twitter.py  tests_notes.md
tests/tweetfeed/: test_data.py  test_twitter_utils.py  test_utils..py  test_utils.py
tweetfeed/: I want to refractor this code into class.md  data.py  main.py  perf.py  pipeline.py  predict.py  prep_batch.md  train.py  twitter_utils.py  twitterutils.py  utils.py
tweetfeed/data/: news_domains.txt  test_tweets.db
