[tool.poetry]
name = "custom_twitter_feed"
version = "0.1.0"
description = ""
authors = ["gsajko <grzegorz.sajko@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"


[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-cov = "^2.10.1"
pylint = "^2.6.0"
mypy = "^0.782"
codecov = "^2.1.9"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
